// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fallback to initials 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#ffffff",
          "fontFamily": "System",
          "fontWeight": "700",
          "includeFontPadding": false,
          "textAlignVertical": "center",
        },
        undefined,
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    UN
  </Text>
</View>
`;

exports[`should render default image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "testUri": "../../../src/avatar/default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render default image if empty name 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render default image if no gravatar 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render default image if no image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render gravatar 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "https://www.gravatar.com/avatar/b58c6f14d292556214bd64909bcdb118?s=100&d=404",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render image as square 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
    ]
  }
>
  <Image
    onError={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render initials 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#8e8e93",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 50,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
      Object {
        "backgroundColor": "hsl(-216, 75%, 50%)",
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#ffffff",
          "fontFamily": "System",
          "fontWeight": "700",
          "includeFontPadding": false,
          "textAlignVertical": "center",
        },
        undefined,
        Object {
          "fontSize": 20,
        },
      ]
    }
  >
    UN
  </Text>
</View>
`;
